--- a/Tareas/proyectoChatTelnet/src/Vistas/JFCliente.form
+++ b/Tareas/proyectoChatTelnet/src/Vistas/JFCliente.form
@@ -49,7 +49,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="txtEnviar" alignment="0" max="32767" attributes="0"/>
+                          <Component id="txtEnviarMensaje" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel1" alignment="0" min="-2" pref="258" max="-2" attributes="0"/>
                           <Component id="label4" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" alignment="0" pref="681" max="32767" attributes="0"/>
@@ -100,7 +100,7 @@
               <EmptySpace pref="30" max="32767" attributes="0"/>
               <Component id="label5" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="txtEnviar" min="-2" max="-2" attributes="0"/>
+              <Component id="txtEnviarMensaje" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnEnviarMensaje" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
@@ -219,7 +219,7 @@
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnConectarceMouseClicked"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtEnviar">
+    <Component class="javax.swing.JTextField" name="txtEnviarMensaje">
     </Component>
     <Component class="java.awt.Label" name="label6">
       <Properties>
