--- a/Tareas/proyectoChatTelnet/src/VistasCliente/JFCliente.form
+++ b/Tareas/proyectoChatTelnet/src/VistasCliente/JFCliente.form
@@ -181,6 +181,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLstUsuariosConectadosMouseClicked"/>
             <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLstUsuariosConectadosMouseReleased"/>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jLstUsuariosConectadosKeyPressed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jLstUsuariosConectadosKeyReleased"/>
