--- a/GISDES/GISDES/Views/Evento/Index.cshtml
+++ b/GISDES/GISDES/Views/Evento/Index.cshtml
@@ -54,7 +54,7 @@
             @Html.DisplayFor(modelItem => item.Estado)
         </td>
         <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Editar", "Modificar", new { id=item.Id }) |
             @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
         </td>
     </tr>
