--- a/GISDES/GISDES/Views/Evento/Crear.cshtml
+++ b/GISDES/GISDES/Views/Evento/Crear.cshtml
@@ -60,16 +60,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Estado )
-                    @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Crear" class="btn btn-default" />
             </div>
@@ -88,7 +78,7 @@
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script>
         $(function () {
-            $(".datepicker").datepicker({changeMonth:true, changeYear:true});
+            $(".datepicker").datepicker({dateFormat: "yy-mm-dd",changeMonth:true, changeYear:true});
         });
 
     </script>
