--- a/GISDES/GISDES/Views/Shared/_Layout.cshtml
+++ b/GISDES/GISDES/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <li>@Html.ActionLink("Estudiante", "Contact", "Home")</li>
                             <li>@Html.ActionLink("Profesor", "Index", "Profesor")</li>
                             <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
-                            <li>@Html.ActionLink("Personas externas", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Personas externas", "Index", "PersonaExterna")</li>
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
